--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 HOST=0.0.0.0
 PORT=8080
 
+RPC_URL_POLYGON_AMOY=https://rpc-amoy.polygon.technology
 RPC_URL_BASE_SEPOLIA=https://sepolia.base.org
 RPC_URL_BASE=https://mainnet.base.org
+RPC_URL_LOAD_ALPHANET=https://alphanet.load.network
 SIGNER_TYPE=private-key
 EVM_PRIVATE_KEY=0xdeadbeef
 
